Fix radio button focus behavior in Harmony.

When the radio button was focused with the tab key, the ink drop ripple
would activate. In addition when the radio button was clicked it would
get a focus ring. This patch fixes both of these things.

Bug: 683858
Change-Id: Ia9f1e672d2d5a51414a6f7db0dc46addd58f398f